--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             
     </div>
-    <script src="../index.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 
