--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                 </div>
             </div>
     
-            <div id="_resultgift" hidden="true"> 
-                <img  id="resultgift"  >
+            <div 
+            id="_resultgift" hidden="false"> 
+                <img  
+                id="resultgift">
             </div>
             
     </div>
